# progetto-academy-gruppo-4

./: README.md  pyproject.toml  ragas_results.csv
docs/: Makefile  conf.py  index.rst  make.bat  overview.rst
docs/api/: crews.rst  index.rst  main.rst  utils.rst  utils_prompt_injection.rst  utils_rag_qdrant_hybrid.rst  utils_ragas_evaluation.rst
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/progetto/: main.html
docs/html/_modules/utils/: prompt_injection.html  rag_qdrant_hybrid.html  ragas_evaluation.html
docs/html/_sources/api/: main.rst.txt  utils_prompt_injection.rst.txt  utils_rag_qdrant_hybrid.rst.txt  utils_ragas_evaluation.rst.txt
docs/html/api/: crews.html  index.html  main.html  utils.html  utils_prompt_injection.html  utils_rag_qdrant_hybrid.html  utils_ragas_evaluation.html
documents/: 01_intro_python.md  02_aspetti_avanzati.md  03_documentazione_tecnica.md
outputs/answer_writer/: complete_answer.md  validated_results.txt
outputs/rag_crew/: final_results_agents.txt
src/progetto/: main.py
src/progetto/crews/answer_writer/: answer_writer.py
src/progetto/crews/answer_writer/config/: agents.yaml  tasks.yaml
src/progetto/crews/rag_crew/: rag_crew.py
src/progetto/prompt_injection/: prompt_injection_utils.py
src/progetto/tools/: custom_tool.py
utils/: documents_parsing_utilits.py  prompt_injection.py  rag_faiss.py  rag_qdrant_hybrid.py  ragas.py  ragas_evaluation.py  white_list.yaml
(+2 files in other folders)
