[project]
name = "progetto"
version = "0.1.0"
description = "progetto using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
    "ddgs>=9.6.0",
    "fitz>=0.0.1.dev2",
    "pdfplumber>=0.11.7",
    "ragas>=0.3.5",
]

[project.scripts]
kickoff = "progetto.main:kickoff"
run_crew = "progetto.main:kickoff"
plot = "progetto.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
